adminのjavadocを修正
