# samples/web-csr/dressca-backend/api-docs/web-admin/api-specification.json
@@ -13,16 +13,20 @@
   ],
   "tags": [
     {
-      "description": "カタログブランドの情報にアクセスするAPI",
-      "name": "CatalogBrands"
+      "description": "アセットの情報にアクセスする API",
+      "name": "Assets"
     },
     {
-      "description": "ログイン中のユーザーの情報を取得します。",
+      "description": "ログイン中のユーザーの情報にアクセスする API",
       "name": "Users"
     },
     {
-      "description": "カタログアイテムの情報にアクセスする API コントローラーです.",
-      "name": "CatalogItems"
+      "description": "カタログカテゴリの情報にアクセスする API",
+      "name": "CatalogCategories"
+    },
+    {
+      "description": "カタログブランドの情報にアクセスする API",
+      "name": "CatalogBrands"
     },
     {
       "description": "Monitor and interact",
@@ -33,12 +37,8 @@
       "name": "Actuator"
     },
     {
-      "description": "アセットの情報にアクセスするAPI",
-      "name": "Assets"
-    },
-    {
-      "description": "カタログカテゴリの情報にアクセスするAPI",
-      "name": "CatalogCategories"
+      "description": "カタログアイテムの情報にアクセスする API",
+      "name": "CatalogItems"
     }
   ],
   "paths": {
@@ -105,7 +105,7 @@
     },
     "/api/assets/{assetCode}": {
       "get": {
-        "description": "与えられたアセットコードに対応するアセットを返却する.",
+        "description": "与えられたアセットコードに対応するアセットを返却する。",
         "operationId": "get",
         "parameters": [
           {
@@ -142,7 +142,7 @@
             "description": "サーバーエラー。"
           }
         },
-        "summary": "アセットを取得する.",
+        "summary": "アセットを取得する。",
         "tags": [
           "Assets"
         ]
@@ -150,7 +150,7 @@
     },
     "/api/catalog-brands": {
       "get": {
-        "description": "カタログブランドの一覧を取得する.",
+        "description": "カタログブランドの一覧を取得する。",
         "operationId": "getCatalogBrands",
         "responses": {
           "200": {
@@ -173,7 +173,7 @@
             "description": "サーバーエラー。"
           }
         },
-        "summary": "カタログブランドの一覧を取得する.",
+        "summary": "カタログブランドの一覧を取得する。",
         "tags": [
           "CatalogBrands"
         ]
@@ -181,7 +181,7 @@
     },
     "/api/catalog-categories": {
       "get": {
-        "description": "カタログカテゴリの一覧を取得します.",
+        "description": "カタログカテゴリの一覧を取得します。",
         "operationId": "getCatalogCategories",
         "responses": {
           "200": {
@@ -204,7 +204,7 @@
             "description": "サーバーエラー。"
           }
         },
-        "summary": "カタログカテゴリの一覧を取得します.",
+        "summary": "カタログカテゴリの一覧を取得します。",
         "tags": [
           "CatalogCategories"
         ]
@@ -212,7 +212,7 @@
     },
     "/api/catalog-items": {
       "get": {
-        "description": "カタログアイテムを検索して返します.",
+        "description": "カタログアイテムを検索して返します。",
         "operationId": "getByQuery",
         "parameters": [
           {
@@ -280,7 +280,7 @@
             "description": "サーバーエラー。"
           }
         },
-        "summary": "カタログアイテムを検索して返します.",
+        "summary": "カタログアイテムを検索して返します。",
         "tags": [
           "CatalogItems"
         ]
@@ -371,7 +371,7 @@
         ]
       },
       "put": {
-        "description": "指定したIDのカタログアイテムの情報を更新します。",
+        "description": "指定した ID のカタログアイテムの情報を更新します。",
         "operationId": "putCatalogItem",
         "parameters": [
           {
@@ -414,7 +414,7 @@
             "description": "サーバーエラー。"
           }
         },
-        "summary": "指定したIDのカタログアイテムの情報を更新します。",
+        "summary": "指定した ID のカタログアイテムの情報を更新します。",
         "tags": [
           "CatalogItems"
         ]
@@ -422,7 +422,7 @@
     },
     "/api/catalog-items/{id}": {
       "get": {
-        "description": "指定したIDのカタログアイテムを返します。",
+        "description": "指定した ID のカタログアイテムを返します。",
         "operationId": "getCatalogItem",
         "parameters": [
           {
@@ -459,7 +459,7 @@
             "description": "サーバーエラー。"
           }
         },
-        "summary": "指定したIDのカタログアイテムを返します。",
+        "summary": "指定した ID のカタログアイテムを返します。",
         "tags": [
           "CatalogItems"
         ]
@@ -492,7 +492,7 @@
     },
     "/api/users": {
       "get": {
-        "description": "ユーザーの情報。",
+        "description": "ログイン中のユーザーの情報を取得します。",
         "operationId": "getLoginUser",
         "responses": {
           "200": {
