# samples/web-csr/dressca-backend/web-admin/src/main/java/com/dressca/web/admin/controller/CatalogBrandsController.java
@@ -25,7 +25,7 @@ import lombok.AllArgsConstructor;
  * {@link CatalogBrand} の情報にアクセスする API コントローラーです。
  */
 @RestController
-@Tag(name = "CatalogBrands", description = "カタログブランドの情報にアクセスするAPI")
+@Tag(name = "CatalogBrands", description = "カタログブランドの情報にアクセスする API")
 @RequestMapping("/api/catalog-brands")
 @AllArgsConstructor
 @PreAuthorize(value = "isAuthenticated()")
@@ -39,7 +39,7 @@ public class CatalogBrandsController {
    * 
    * @return カタログブランドの一覧
    */
-  @Operation(summary = "カタログブランドの一覧を取得する.", description = "カタログブランドの一覧を取得する.")
+  @Operation(summary = "カタログブランドの一覧を取得する。", description = "カタログブランドの一覧を取得する。")
   @ApiResponses(value = {
       @ApiResponse(responseCode = "200", description = "成功。", content = @Content(mediaType = "application/json", array = @ArraySchema(schema = @Schema(implementation = GetCatalogBrandsResponse.class)))),
       @ApiResponse(responseCode = "401", description = "未認証。", content = @Content),
